; ModuleID = '/home/carl/AnghaBench/linux/drivers/md/extr_dm-bio-prison-v1.c_dm_cell_visit_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/md/extr_dm-bio-prison-v1.c_dm_cell_visit_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dm_bio_prison = type { i32, i32 }
%struct.dm_bio_prison_cell = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dm_cell_visit_release(%struct.dm_bio_prison* %0, void (i8*, %struct.dm_bio_prison_cell*)* %1, i8* %2, %struct.dm_bio_prison_cell* %3) #0 {
  %5 = alloca %struct.dm_bio_prison*, align 8
  %6 = alloca void (i8*, %struct.dm_bio_prison_cell*)*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.dm_bio_prison_cell*, align 8
  %9 = alloca i64, align 8
  store %struct.dm_bio_prison* %0, %struct.dm_bio_prison** %5, align 8
  store void (i8*, %struct.dm_bio_prison_cell*)* %1, void (i8*, %struct.dm_bio_prison_cell*)** %6, align 8
  store i8* %2, i8** %7, align 8
  store %struct.dm_bio_prison_cell* %3, %struct.dm_bio_prison_cell** %8, align 8
  %10 = load %struct.dm_bio_prison*, %struct.dm_bio_prison** %5, align 8
  %11 = getelementptr inbounds %struct.dm_bio_prison, %struct.dm_bio_prison* %10, i32 0, i32 0
  %12 = load i64, i64* %9, align 8
  %13 = call i32 @spin_lock_irqsave(i32* %11, i64 %12)
  %14 = load void (i8*, %struct.dm_bio_prison_cell*)*, void (i8*, %struct.dm_bio_prison_cell*)** %6, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %8, align 8
  call void %14(i8* %15, %struct.dm_bio_prison_cell* %16)
  %17 = load %struct.dm_bio_prison_cell*, %struct.dm_bio_prison_cell** %8, align 8
  %18 = getelementptr inbounds %struct.dm_bio_prison_cell, %struct.dm_bio_prison_cell* %17, i32 0, i32 0
  %19 = load %struct.dm_bio_prison*, %struct.dm_bio_prison** %5, align 8
  %20 = getelementptr inbounds %struct.dm_bio_prison, %struct.dm_bio_prison* %19, i32 0, i32 1
  %21 = call i32 @rb_erase(i32* %18, i32* %20)
  %22 = load %struct.dm_bio_prison*, %struct.dm_bio_prison** %5, align 8
  %23 = getelementptr inbounds %struct.dm_bio_prison, %struct.dm_bio_prison* %22, i32 0, i32 0
  %24 = load i64, i64* %9, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* %23, i64 %24)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
